--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-qrcode",
-  "version": "0.2.7",
+  "name": "@react-native-oh-tpl/react-native-qrcode",
+  "version": "0.2.7-0.0.1",
   "description": "react-native qrocode generator",
   "main": "index.js",
   "repository": {
@@ -20,6 +20,10 @@
   "dependencies": {
     "create-react-class": "^15.6.0",
     "prop-types": "^15.5.10",
-    "qr.js": "0.0.0"
-  }
+    "qr.js": "0.0.0",
+    "react-native-qrcode":"0.2.7"
+  },
+  "harmony": {
+    "alias": "react-native-qrcode"
+}
 }
